<resources>
    <string name="app_name" translatable="false">HCMS</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="slide_1_title">Daily Workout</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="Welcome" translatable="false">Welcome</string>
    <string name="choose">Choose Language</string>
    <string name="health">Health Care Management system</string>
    <string name="login">Login</string>
    <string name="login_activities">Login Here</string>
    <string name="about" translatable="false">About Us</string>
    <string name="about_activities" translatable="false">Hospital InfraStructure</string>
    <string name="contact">Contact Us</string>
    <string name="contact_activities">Clarify Your Details</string>
    <string name="developed">Developed by</string>
    <string name="name">G BHARGAV</string>
    <string name="text">Please Feel Free Us to Contact to clarify your doubts and improve your application status</string>
    <string name="email">Email</string>
    <string name="emailid">bhargav.gurramkonda@gmail.com</string>
    <string name="contact1">Contact</string>
    <string name="phone">9492515352</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="link_to_register">Register Here</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="portal">Portal Page</string>
    <string name="sign_in_short">Register</string>
    <string name="link_to_login">Already registered.Login Here!</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="admin" translatable="false">Admin</string>
    <string name="admin_details" translatable="false">Admin Details</string>
    <string name="doctor">Doctor</string>
    <string name="doctor_activities">Doctor Details</string>
    <string name="message">Message</string>
    <string name="message_me">Message to Doctor and Admin</string>
    <string name="call">Call</string>
    <string name="call_me">Call to Doctor and Admin</string>
    <string name="feedback">Feedback</string>
    <string name="livechat_userinfo">Live Chat and User Info</string>
    <string name="livechatuserinfo">LC and UI</string>
    <string name="googlemap">Google Map</string>
    <string name="google_map">Navigate Nearby Hospitals</string>
    <string name="totalhealth">Total Health Tips</string>
    <string name="totalhealth_me">Total Health Care Tips</string>
    <string name="tophospital">Top Hospitals</string>
    <string name="tophospital_me">Top 15 Hospitals in India</string>
    <string name="hospital">Hospitals</string>
    <string name="hossettingspital1">Hosps in India</string>
    <string name="hospitals">Hospitals in India</string>
    <string name="logout_message">Are you sure u want to Logout from HCMS</string>
    <string name="thanks_message">Thanks for using HCMS Application.Any Doubts Please Feedback</string>
    <string name="india_me">States and Cities Hospitals in India</string>
    <string name="blooddonation">Donate Blood</string>
    <string name="blooddonation_me">Donate Blood Save Life</string>
    <string name="alarm" translatable="false">Alarm</string>
    <string name="alarm_me">Health Reminder</string>
    <string name="vitamins">Vitamins</string>
    <string name="vitamins_me">Vitamins Tips</string>
    <string name="medications">Medications</string>
    <string name="medications_me">Tablets Details</string>
    <string name="phoneno">Enter Phone Number....</string>
    <string name="message1">Text Your Message....</string>
    <string name="sendmessage">Send Message</string>
    <string name="msg_sent">Message Sent</string>
    <string name="integer_only">Please Enter Integer Only</string>
    <string name="msg_permission">You don\'t have required permission to make the Action</string>
    <string name="title_activity_tophospital_web_view">Hospital Details</string>
    <string name="text1">Enter Name,Blood Group,Phone No</string>
    <string name="donateblood">Donate Blood</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_reset_password">Reset Password Activity</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message2">Message:</string>
    <string name="feedback1">Feedback Us to Clarify Your Doubts</string>
    <string name="doctordetails">Doctor Details</string>
    <string name="admindetails" translatable="false">Admin Details</string>
    <string name="help">Help</string>
    <string name="help_me">Clarify Your Doubts</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="logout_me">Logout from HCMS</string>
    <string name="immunization">Immunization</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="exercise">Exercise</string>
    <string name="routinemaker">Routine Maker</string>
    <string name="workoutmanagement">Workout Management</string>
    <string name="pimples">Acne/Pimples</string>
    <string name="scars">Scars</string>
    <string name="facecare">Face Care</string>
    <string name="hairloss">Hair Loss</string>
    <string name="dandruff">Dandruff</string>
    <string name="hairgrowth">Hair Growth</string>
    <string name="cough">Cold &amp; Cough</string>
    <string name="stomach_ache">Stomach Ache</string>
    <string name="headache">Head Ache</string>
    <string name="backpain">Back Pain</string>
    <string name="jointpain">Joint Pain</string>
    <string name="sunburn">Sun Burn</string>
    <string name="immunization_me">World Health Organization</string>
    <string name="a" translatable="false">A</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="b5">B5</string>
    <string name="b6">B6</string>
    <string name="b7">B7</string>
    <string name="b9">B9</string>
    <string name="b12">B12</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="k">K</string>
    <string name="vitamina">Vitamin A</string>
    <string name="vita_heading">Retinol/Retinal</string>
    <string name="vita_mesg">Vitamin A is also called as Retinal.Vitamin A is a group of fat-soluble substances that are found in animal products.These substances include retinol(an alchol) and retinal(an aldehyde).Retinal is responsible for porduction of an acid that affects gene transcription.By means of cellular differentiation,physiological roles of cells are specialized.Vitamin A also includes carotenoids,which are produced by plants.These are transformed to retinalFruits and vegetables for example contain beta-carotene,which is converted to Vitamin A in the human body.</string>
    <string name="vit_funcs">Functions</string>
    <string name="mon">Monday:</string>
    <string name="mon1">Cardio exercise for 30-45 minutes. It can be anything like running, jogging, walking, Dancing, etc. Do this twice in the day for eg morning and evening. You can jog/run/walk during morning time and dance on your favorite beat at evening or do other exercise such as jump squat, skipping, etc.</string>
    <string name="tue">Tuesday:</string>
    <string name="tue1">Total body strength training such as squats, crunches, step-up bicep curls, etc.on this day. Strength training and cardio must be balanced for great results.</string>
    <string name="wed">Wednesday:</string>
    <string name="wed1">Take rest or you can get involved in yoga or stretching to relax your muscles from the intense workout.</string>
    <string name="thur">Thursday:</string>
    <string name="thur1">Today again is the day of cardio for 30 mins.</string>
    <string name="fri">Friday:</string>
    <string name="fri1" translatable="false">Total body strength training.</string>
    <string name="sat">Saturday:</string>
    <string name="sat1">Cardio exercise.</string>
    <string name="sun">Sunday:</string>
    <string name="sun1">Take rest and relax.</string>
    <string name="almond1">Almond face mask for fair and glowing skin</string>
    <string name="almond2">This homemade face mask of almonds can do wonders with the colour of your skin. Use daily for a fortnight and see the result yourself. Better than any skin care product in the market. I have tried it and you can see the result the very first day.</string>
    <string name="almond3">Ingredients:</string>
    <string name="almond4">3-4 Almonds\nMilk to soak the Almonds.</string>
    <string name="almond5">Preparation:</string>
    <string name="almond6">In the morning soak 3 or four almonds(according to the area on which to be applied may be used for other parts of the body as well) in the milk. At night mash these almonds in the milk you can use some more milk. Mash it to form very fine paste. Apply to the face. Leave for whole night. In the morning wash face with cold water. With this face mask your skin becomes lighter as well as glowing. This homemade remedy for getting fair and glowing skin also leaves your skin smooth and silky. For dry skin, you can use daily. For oily skin use twice in the week.</string>
    <string name="isa1">Indulge in some aloe</string>
    <string name="isa2">Aloe vera gel is many peoples go-to when they have sunburn. It\'s cool, soothing, and seems to suck the sting and redness right out of your sunburn. Because aloe is useful for a number of other ailments (such as acne or heartburn) it\'s handy to have a plant growing in your house. They\'re easy to maintain, free from any additives, and you won\'t have to keep running out to buy more from the store all the time once it\'s big enough. If you would really rather prefer not having the plant, getting some good quality aloe vera gel from the store is the next best thing-it\'s also more practical for treating larger areas.</string>
    <string name="isa3">You will need:</string>
    <string name="isa4">An aloe plant with thick, juicy, leaves\nEnough store bought gel to cover your burn</string>
    <string name="isa5">If using the plant, slit several big leaves down the middle, not cutting all the way through. Spread them flat, and lay on your burn. You can also squeeze the gel out. If you\'re using gel that\'s already been extracted, apply however much you need to your sunburn. The plant is usually more practical when treating smaller areas, while the purchased aloe gel is easier to spread over a big burn. A combination of both works as well.</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_google_map">Google Map</string>
    <string name="communicate">Communicate</string>
    <string name="daily_tips1">Daily Health TIPS</string>
    <string name="some_types_of_vitamins">VITAMINS</string>
</resources>