<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/loadingimage"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/isa1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="30dp"
            android:textColor="@color/dot_inactive_screen2"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isa2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/isa3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/detail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isa4"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/detail3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isa5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>