<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.AboutUs">

    <ScrollView android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="60dp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developed"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textSize="20dp" />

            <FrameLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <VideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
